--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <span class="hero-badge">Wraps • Calzones • Wings • Salads</span>
             </div>
 
-            <a href="#order" class="cta-button">Start Your Order</a>
+            <a href="#order" class="cta-button">Order Now</a>
         </div>
     </div>
 
