--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             min-height: 420px;
             background:
                 linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-                url("https://lh3.googleusercontent.com/p/AF1QipM-WvnksR8h5dyxWEGadhCCeG7SzOUNiTQ3hD_l=w289-h312-n-k-no");
+                url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fonebite.app%2Frestaurant%2Fannies-pizzeria-medford-massachusetts-5a37835b&psig=AOvVaw0uRfFAqBXwFCt5Gsw05PNa&ust=1764119226404000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCMiFquSPjJEDFQAAAAAdAAAAABAE");
             background-size: cover;
             background-position: center;
             display: flex;
