--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             min-height: 420px;
             background:
                 linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-                url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FAnniesMedford%2F&psig=AOvVaw0uRfFAqBXwFCt5Gsw05PNa&ust=1764119226404000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCMiFquSPjJEDFQAAAAAdAAAAABA2");
+                url("https://lh3.googleusercontent.com/p/AF1QipNb835mmqqrTaMKHNuRsPS6LnbwvVU0D4W_kgqx=s1360-w1360-h1020");
             background-size: cover;
             background-position: center;
             display: flex;
