--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <!-- Card 3 -->
         <div class="col-md-4">
           <div class="cuisine-card">
-            <img src="img/3.png" alt="Salads and sides at Annie's Pizzeria" />
+            <img src="img/salads.png" alt="Salads and sides at Annie's Pizzeria" />
             <div class="cuisine-body">
               <div class="cuisine-label">Fresh</div>
               <h4>Salads & Sides</h4>
