--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <div class="container">
       <div class="section-header">
         <h2>We Are On Instagram</h2>
-        <h3>Follow Us!/h3>
+        <h3>Follow Us!</h3>
         <p>
           See the latest pies coming out of the oven, daily specials, and behind-the-scenes
           moments from the shop.
