--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       color: var(--text-dark);
       background-color: #ffffff;
+      padding-top: 56px;
     }
 
     /* Navbar */
